# wancode

./: .g16-verify  .gitignore  .pr-smoke  ANNOUNCEMENT.md  NOTICE  README.md  latest.json  package-lock.json  package.json  quicksort.py
.github/workflows/: ci.yml
blog-demo/: index.html
blog-demo/css/: style.css
blog-demo/js/: app.js
docs/: dogfood-log.md  feature-blueprint-2026H2.md  golden-tasks.md  improvement-plan.md  roadmap-vs-claude-code-codex.md  security-sandbox-assessment.md
docs/golden-runs/: v0.17.0.md  v0.18.0.md
scripts/: bootstrap.ps1  release.ps1  smoke.ps1
src/: App.css  App.tsx  PtyTerm.tsx  i18n.ts  icons.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: App.css  agent.rs  autotest.rs  config_core.rs  crash_recovery.rs  engine_ops.rs  git_ops.rs  lib.rs  main.rs  provider_ops.rs  review_ops.rs  skills_ops.rs
src-tauri/tests/: engine_canary.rs
src/features/composer/: Composer.tsx
src/features/dialogs/: Dialogs.tsx
src/features/git/: GitPanel.tsx
src/features/home/: Home.tsx
src/features/messages/: Messages.tsx
src/features/onboarding/: OnboardingWizard.tsx
src/features/palette/: CommandPalette.tsx
src/features/settings/: SettingsModal.tsx
src/features/sidebar/: Sidebar.tsx
src/features/tasks/: TasksPanel.tsx
src/features/terminal/: TerminalPanel.tsx
src/features/workbench/: Workbench.tsx
